# azu-21

./: .gitignore  Makefile.am  README.md  configure.ac
doc/: PWM.tex
ld/: stm32f030x.ld
src/: azu21.c  charger.c  charger.h  display.c  display.h  keyboard.c  keyboard.h  utils.c  utils.h
src/hal/: adc.c  adc.h  pwm.c  pwm.h  startup_stm32f0xx.c  systick.c  systick.h
